2023-10-28T00:57:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6673745837 # 1306
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-28
* notice: last 14d: unq all: 4 4158
* notice: prev accum: outdated-unq outdated-all / unq all: 1782 169474 / 1819 173890
* notice: next accum: outdated-unq outdated-all / unq all: 1785 169775 / 1819 173983
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -50 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2023-10-13] / [2023-10-14 2023-10-27]

2023-10-27T16:16:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6669668556 # 1305
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
* notice: last 14d: unq all: 4 4155
* notice: prev accum: outdated-unq outdated-all / unq all: 1782 169474 / 1819 173795
* notice: next accum: outdated-unq outdated-all / unq all: 1782 169474 / 1819 173890
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -93 / +2 +207 -0 -0 / 2 207
* notice: removed / changed dates: [] / [2023-10-13 2023-10-27]

2023-10-27T08:16:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6664668901 # 1304
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
* notice: last 14d: unq all: 4 4153
* notice: prev accum: outdated-unq outdated-all / unq all: 1782 169474 / 1817 173683
* notice: next accum: outdated-unq outdated-all / unq all: 1782 169474 / 1819 173795
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -1 -124 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-10-13 2023-10-27]

2023-10-27T00:58:11Z: