@@ -1,10 +1,10 @@
 {
-  "count": 4158,
+  "count": 4153,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-10-14T00:00:00Z",
-      "count": 251,
+      "count": 134,
       "uniques": 2
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-10-27T00:00:00Z",
       "count": 300,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-28T00:00:00Z",
+      "count": 112,
       "uniques": 2
     }
   ]
