@@ -1,3 +1,12 @@
+2023-10-28T08:14:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6675768453 # 1307
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-28
+* notice: last 14d: unq all: 4 4153
+* notice: prev accum: outdated-unq outdated-all / unq all: 1785 169775 / 1819 173983
+* notice: next accum: outdated-unq outdated-all / unq all: 1785 169775 / 1821 174095
+* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -117 / +2 +112 -0 -0 / 2 112
+* notice: removed / changed dates: [] / [2023-10-14 2023-10-28]
+
 2023-10-28T00:57:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6673745837 # 1306
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-28
